src/main/java/ru/projects/test_task_aikamsoft/utils/error/WrongArgumentException.java
package ru.projects.test_task_aikamsoft.utils.error;

public class WrongArgumentException extends Exception{

    public WrongArgumentException(String msg){
        super(msg);
    }
}
